--- a/.github/workflows/immortalwrt-r2s-openwrt.yml
+++ b/.github/workflows/immortalwrt-r2s-openwrt.yml
@@ -159,4 +159,4 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 7
+       #   retain_days: 7
